integ-tests/tests/snapshots/parser__eof.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[unexpected-eof]: unexpected end of file
  ┌─ eof:1:6
  │
1 │ key =
  │      ^


